// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> renders correctly 1`] = `
<nav
  aria-label="sidebar"
  className="sidebar border-right h-100 d-none d-lg-flex has-shadow"
  id="sidebar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="sidebar-content py-2"
  >
    <ul
      className="nav nav-pills flex-column m-0"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learners"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16 6 2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6h-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Learner Progress Report
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/coupons"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.83 12.99 11.83 2H2v9.83l10.99 10.99 9.84-9.83ZM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Code Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/subscriptions"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 4H2.01L2 20h20V4zm-2 14H4v-6h16v6zm0-10H4V6h16v2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Subscription Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learner-credit"
          id="learner-credit-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Learner Credit Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/settings"
          id="settings-sidebar-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m19.44 12.99-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66ZM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Settings
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<Sidebar /> renders correctly when code management is hidden 1`] = `
<nav
  aria-label="sidebar"
  className="sidebar border-right h-100 d-none d-lg-flex has-shadow"
  id="sidebar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="sidebar-content py-2"
  >
    <ul
      className="nav nav-pills flex-column m-0"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learners"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16 6 2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6h-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Learner Progress Report
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learner-credit"
          id="learner-credit-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Learner Credit Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/settings"
          id="settings-sidebar-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m19.44 12.99-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66ZM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span
              className="sr-only"
            >
              Settings
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<Sidebar /> renders correctly when expanded 1`] = `
<nav
  aria-label="sidebar"
  className="sidebar border-right h-100 d-none d-lg-flex d-flex expanded has-shadow"
  id="sidebar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="sidebar-content py-2"
  >
    <ul
      className="nav nav-pills flex-column m-0"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learners"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16 6 2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6h-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Learner Progress Report
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/coupons"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.83 12.99 11.83 2H2v9.83l10.99 10.99 9.84-9.83ZM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Code Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/subscriptions"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 4H2.01L2 20h20V4zm-2 14H4v-6h16v6zm0-10H4V6h16v2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Subscription Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learner-credit"
          id="learner-credit-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Learner Credit Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/settings"
          id="settings-sidebar-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m19.44 12.99-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66ZM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Settings
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<Sidebar /> renders correctly when expanded by toggle 1`] = `
<nav
  aria-label="sidebar"
  className="sidebar border-right h-100 d-none d-lg-flex d-flex expanded"
  id="sidebar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <div
    className="sidebar-content py-2"
  >
    <ul
      className="nav nav-pills flex-column m-0"
    >
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learners"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m16 6 2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6h-6z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Learner Progress Report
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/coupons"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22.83 12.99 11.83 2H2v9.83l10.99 10.99 9.84-9.83ZM5.5 7C4.67 7 4 6.33 4 5.5S4.67 4 5.5 4 7 4.67 7 5.5 6.33 7 5.5 7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Code Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/subscriptions"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 4H2.01L2 20h20V4zm-2 14H4v-6h16v6zm0-10H4V6h16v2z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Subscription Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/learner-credit"
          id="learner-credit-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm.31-8.86c-1.77-.45-2.34-.94-2.34-1.67 0-.84.79-1.43 2.1-1.43 1.38 0 1.9.66 1.94 1.64h1.71c-.05-1.34-.87-2.57-2.49-2.97V5H10.9v1.69c-1.51.32-2.72 1.3-2.72 2.81 0 1.79 1.49 2.69 3.66 3.21 1.95.46 2.34 1.15 2.34 1.87 0 .53-.39 1.39-2.1 1.39-1.6 0-2.23-.72-2.32-1.64H8.04c.1 1.7 1.36 2.66 2.86 2.97V19h2.34v-1.67c1.52-.29 2.72-1.16 2.73-2.77-.01-2.2-1.9-2.96-3.66-3.42Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Learner Credit Management
            </span>
          </div>
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          aria-current={null}
          className="nav-link text-left rounded-0 d-flex align-items-center"
          href="/test-enterprise-slug/admin/settings"
          id="settings-sidebar-link"
          onClick={[Function]}
        >
          <div
            className="position-relative d-flex align-items-center"
          >
            <span
              className="d-flex align-items-center"
            >
              <span
                className="pgn__icon mr-2"
              >
                <svg
                  aria-hidden={true}
                  fill="none"
                  focusable={false}
                  height={24}
                  role="img"
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m19.44 12.99-.01.02c.04-.33.08-.67.08-1.01 0-.34-.03-.66-.07-.99l.01.02 2.44-1.92-2.43-4.22-2.87 1.16.01.01c-.52-.4-1.09-.74-1.71-1h.01L14.44 2H9.57l-.44 3.07h.01c-.62.26-1.19.6-1.71 1l.01-.01-2.88-1.17-2.44 4.22 2.44 1.92.01-.02c-.04.33-.07.65-.07.99 0 .34.03.68.08 1.01l-.01-.02-2.1 1.65-.33.26 2.43 4.2 2.88-1.15-.02-.04c.53.41 1.1.75 1.73 1.01h-.03L9.58 22h4.85s.03-.18.06-.42l.38-2.65h-.01c.62-.26 1.2-.6 1.73-1.01l-.02.04 2.88 1.15 2.43-4.2s-.14-.12-.33-.26l-2.11-1.66ZM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </span>
            <span>
              Settings
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
